fix: refactor index.js, func initKeys made in separate modules and initShiftKeys

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,7 +4,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-color: olive;
 }
 
 .text_area {
@@ -23,4 +22,9 @@ body {
     justify-content: space-around;
     border: 1px solid #000;
     background-color: #000;
+}
+
+.heading {
+    font-size: 32px;
+    font-style: italic;
 }
